# openfan-rs

./: .convco  .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  LICENSE-APACHE  LICENSE-MIT  Makefile  PROJECT-STATUS.md  README.md  codecov.yml  config.toml  config.yaml  deny.toml  docker-compose.yml
.github/: poutine.yml  zizmor.yml
.github/workflows/: ci-compatibility-matrix.yml  ci-coverage.yml  ci-essentials.yml  ci.yml  release.yml  schedule-renovate.yml
ci/: test_full.sh
deploy/: build-release.sh  create-deb.sh  install.sh  openfan-server.service  openfand.service
deploy/debian/: control
docs/: TUTORIAL.md
openfan-cli/: Cargo.toml
openfan-cli/src/: client.rs  config.rs  format.rs  lib.rs  main.rs  test_utils.rs
openfan-cli/tests/: e2e_integration_tests.rs  simple_integration_tests.rs
openfan-core/: Cargo.toml
openfan-core/src/: api.rs  board.rs  error.rs  hardware.rs  lib.rs  types.rs
openfan-core/src/config/: aliases.rs  cfm_mappings.rs  mod.rs  paths.rs  profiles.rs  static_config.rs  thermal_curves.rs  zones.rs
openfan-hardware/: Cargo.toml
openfan-hardware/src/: fan_controller.rs  lib.rs  serial_driver.rs
openfan-server/: Cargo.toml
openfan-server/src/: main.rs
openfan-server/src/api/: mod.rs
openfan-server/src/api/handlers/: aliases.rs  fans.rs  info.rs  mod.rs  profiles.rs
openfan-server/src/hardware/: fan_commander.rs  fan_controller.rs  mod.rs
openfanctl/: Cargo.toml  config.yaml
openfanctl/src/: client.rs  config.rs  format.rs  lib.rs  main.rs  test_utils.rs
openfanctl/src/cli/: commands.rs  handlers.rs  mod.rs
openfanctl/tests/: e2e_integration_tests.rs  simple_integration_tests.rs
openfand/: Cargo.toml
openfand/src/: main.rs  shutdown.rs
openfand/src/api/: mod.rs
openfand/src/api/handlers/: aliases.rs  cfm.rs  controllers.rs  fans.rs  info.rs  mod.rs  profiles.rs  thermal_curves.rs  zones.rs
openfand/src/config/: controller_data.rs  mod.rs  runtime_config.rs
openfand/src/controllers/: connection_manager.rs  mod.rs
openfand/src/hardware/: connection_manager.rs  controller_registry.rs  mod.rs
