[workspace]
members = ["openfan-core", "openfand", "openfanctl", "openfan-hardware"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["OpenFAN Contributors"]
license = "MIT"
repository = "https://github.com/graelo/openfan-rs"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1"

# Server dependencies
axum = "0.8"
tokio-serial = "5"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower = "0.5"

# CLI dependencies
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13", default-features = false, features = ["json"] }
tabled = "0.20"
colored = "3"
clap_complete = "4"
toml = "0.9"
urlencoding = "2"
dirs = "6"
