[workspace]
resolver = "2"
members = ["openfan-core", "openfan-hardware", "openfanctl", "openfand"]

[workspace.package]
version = "0.2.1"
edition = "2021"
repository = "https://github.com/graelo/openfan-rs"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
# Shared dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

# Server dependencies
axum = "0.8"
serde_yaml = "0.9"
tokio-serial = "5"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI dependencies
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "3"
dirs = "6"
reqwest = { version = "0.13", default-features = false, features = ["json"] }
tabled = "0.20"
toml = "1.1"
urlencoding = "2"
