[package]
name = "openfan-core"
description = "Core types, models, and configuration for OpenFAN fan controllers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["fan-control", "pwm", "hardware", "embedded", "controller"]
categories = ["hardware-support", "embedded"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
dirs.workspace = true

[dev-dependencies]
serde_json.workspace = true
serde_yaml.workspace = true
