[package]
name = "openfan-core"
version.workspace = true
edition.workspace = true
description = "Core types, models, and configuration for OpenFAN fan controllers"
repository.workspace = true
license.workspace = true
keywords = ["controller", "embedded", "fan-control", "hardware", "pwm"]
categories = ["embedded", "hardware-support"]

[dependencies]
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
serde_json.workspace = true
serde_yaml.workspace = true
