[package]
name = "openfan-hardware"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
openfan-core = { path = "../openfan-core" }
tokio.workspace = true
tokio-serial.workspace = true
thiserror.workspace = true
tracing.workspace = true
