[package]
name = "openfan-hardware"
version.workspace = true
edition.workspace = true
description = "Serial communication driver for OpenFAN hardware"
repository.workspace = true
license.workspace = true
keywords = ["fan-control", "hardware", "pwm", "serial", "usb"]
categories = ["embedded", "hardware-support"]

[dependencies]
async-trait.workspace = true
openfan-core = { path = "../openfan-core" }
thiserror.workspace = true
tokio.workspace = true
tokio-serial.workspace = true
tracing.workspace = true
