[package]
name = "openfan-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "openfan-server"
path = "src/main.rs"

[dependencies]
# Internal dependencies
openfan-core = { path = "../openfan-core" }

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Async runtime
tokio.workspace = true

# Serial communication
tokio-serial.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI argument parsing
clap.workspace = true

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
