[package]
name = "openfanctl"
description = "CLI client for OpenFAN fan controllers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "openfanctl"
path = "src/main.rs"

[dependencies]
# Internal dependencies
openfan-core = { path = "../openfan-core" }

# CLI framework
clap.workspace = true
clap_complete.workspace = true

# HTTP client
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Output formatting
tabled.workspace = true
colored.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Async runtime
tokio.workspace = true

# For test utilities (mock server)
axum.workspace = true
rand = "0.9"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
urlencoding.workspace = true
serial_test = "3.0"
