[package]
name = "openfanctl"
version.workspace = true
edition.workspace = true
description = "CLI client for OpenFAN fan controllers"
repository.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "openfanctl"
path = "src/main.rs"

[dependencies]
# Internal dependencies
openfan-core = { path = "../openfan-core" }

# CLI framework
clap.workspace = true
clap_complete.workspace = true

# HTTP client
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

colored.workspace = true
# Output formatting
tabled.workspace = true

anyhow.workspace = true
# Error handling
thiserror.workspace = true

# Async runtime
tokio.workspace = true

# For test utilities (mock server)
axum.workspace = true
rand = "0.10"

[dev-dependencies]
serial_test = "3.0"
tempfile = "3"
tokio-test = "0.4"
urlencoding.workspace = true
