[package]
name = "openfand"
version.workspace = true
edition.workspace = true
description = "REST API server for OpenFAN fan controllers"
repository.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "openfand"
path = "src/main.rs"

[dependencies]
# Internal dependencies
openfan-core = { path = "../openfan-core" }
openfan-hardware = { path = "../openfan-hardware" }

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Async runtime
tokio.workspace = true

# Serial communication
tokio-serial.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI argument parsing
clap.workspace = true

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
